fixed-whitespace-bug-in-display-of-contents

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ background-color: white;
 /* Title image */
 
 .title-image {
-    width: 130%;
+    width: 110%;
     position: absolute;
     /* z-index: 0; */
     /* right: 5%; */
